[tool.poetry]
name = "arxiv-search"
version = "0.1.0"
description = ""
authors = ["veenaramesh <veena.ramesh.1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
feedparser = "^6.0.11"
sqlitedict = "^2.1.0"
spacy = "^3.7.4"
en_core_web_trf = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3-py3-none-any.whl"}
gensim = "^4.3.2"
rank-bm25 = "^0.2.2"
hnswlib = "^0.8.0"
chromadb = "^0.4.22"
langchain = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
